# scLJA

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
lib/edlib/include/: edlib.h
lib/edlib/src/: edlib.cpp
src/: GFA_graph.cpp  GFA_graph.hpp  align_SAGs.cpp  align_SAGs.hpp  dot_graph.cpp  dot_graph.hpp  dot_io.cpp  dot_simplify.cpp  main.cpp  process_GFA.cpp  process_GFA.hpp  utils.cpp  utils.hpp
src/scripts/: analyze_contigs.py  generate_color_for_bandage.py  get_vis.sh
